<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!-- Top Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_9"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/statusIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/photopizza_ip"
            android:textColorHint="@color/secondary_color"
            app:boxStrokeColor="@color/secondary_color"
            app:hintTextColor="@color/secondary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/connectBtn"
            app:layout_constraintStart_toEndOf="@+id/statusIcon"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="192.168.4.1"
                android:textColor="@color/secondary_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/connectBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textColor="@color/secondary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />

    <!-- PhotoPizza Turntable Visualization -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photoPizzaContainer"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSpace">

        <FrameLayout
            android:id="@+id/turnSection"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frameLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/primary_bg_color"
            android:textSize="150sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/degree"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cursorIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:rotation="90"
                android:src="@drawable/ic_cursor"
                app:tint="@color/primary_bg_color" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:id="@+id/middleSpace"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/photoPizzaContainer" />

    <!-- Settings ScrollView -->
    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomToolbar"
        app:layout_constraintTop_toBottomOf="@+id/middleSpace">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/frames_total"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/frameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="100"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/speed"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/speedInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="5000"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/pause"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pauseInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="100"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/delay"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/delayInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="300"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/all_steps"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/allStepsInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="200"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/shooting_mode"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <AutoCompleteTextView
                        android:id="@+id/shootingModeDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/interval"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/direction"
                    android:textColor="@color/theme_9" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/theme_9"
                    app:boxStrokeColor="@color/theme_9"
                    app:hintTextColor="@color/theme_9">

                    <AutoCompleteTextView
                        android:id="@+id/directionDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/clockwise"
                        android:textColor="@color/theme_9" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_9"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/startBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/start"
            android:textColor="@color/secondary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stopBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stopBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/stop"
            android:textColor="@color/secondary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintStart_toEndOf="@+id/startBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/save"
            android:textColor="@color/secondary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stopBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 